# erynoa

./: .dockerignore  .env  .env.example  .envrc  .gitignore  Caddyfile  Cargo.toml  DEV_SETUP.md  DOCKER.md  README.md  RUNTIME_TEST_SUMMARY.md  SETUP.md  TEST_COMPLETE.md  biome.json  buf.gen.yaml  buf.yaml  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  structure_optimization_plan.md  turbo.json
.cargo/: config.toml
.devcontainer/: Dockerfile  PORTS.md  devcontainer.json  docker-compose.yml  init.sh  services.yml  setup-and-init.sh  setup.sh
README/: ESSENTIAL_GUIDE.md  README.md
backend/: .gitignore  Cargo.toml  build.rs
backend/.cargo/: config.toml
backend/config/: base.toml  local.toml  production.toml
backend/data/data/: db  snap.0000000000000847
backend/documentation/: app.js  dep-graph.html  internal-dep-graph.dot  style.css
backend/documentation/system/: API-PLAN-STATE-DRIVEN.md  CORE-DOMAIN-LOCAL-INTEGRATION.md  CORE-REFACTORING-PLAN.md  DOMAIN-REFACTORING-PLAN.md  ECL-ECLVM-REFACTORING-PLAN.md  ECL-ECLVM-USE-CASE-CHECK.md  ECL-HOST-STATE-CONTEXT.md  ECL-STATE-RS-GAP-ANALYSIS.md  EXECUTION-REFACTORING-PLAN.md  LOCAL-REFACTORING-PLAN.md  STATE-RS-REFERENCE.md
backend/proto/erynoa/v1/: health.proto  info.proto  peer.proto  storage.proto  user.proto
backend/src/: error.rs  lib.rs  main.rs  server.rs  telemetry.rs
backend/src/api/: constants.rs  mod.rs  routes.rs  static_files.rs
backend/src/api/handlers/: health.rs  info.rs  mod.rs  status.rs  storage.rs  users.rs
backend/src/api/middleware/: auth.rs  cors.rs  error_handler.rs  frontend_origin.rs  logging.rs  mod.rs
backend/src/api/shared/: mod.rs  pagination.rs
backend/src/api/v1/: connect_routes.rs  debug_handlers.rs  mod.rs  production_handlers.rs  rest_handlers.rs  state_handlers.rs
backend/src/api/v1/auth/: handlers.rs  mod.rs  types.rs
backend/src/api/v1/environment/: handlers.rs  mod.rs
backend/src/api/v1/health/: connect.rs  handler.rs  handlers.rs  mod.rs  models.rs  routes.rs
backend/src/api/v1/info/: connect.rs  handler.rs  handlers.rs  mod.rs  models.rs  routes.rs
backend/src/api/v1/intent/: handlers.rs  mod.rs
backend/src/api/v1/peer/: handlers.rs  mod.rs
backend/src/api/v1/saga/: handlers.rs  mod.rs
backend/src/api/v1/storage/: connect.rs  handler.rs  handlers.rs  mod.rs  models.rs  routes.rs
backend/src/api/v1/users/: connect.rs  handler.rs  handlers.rs  mod.rs  models.rs  routes.rs
backend/src/auth/: claims.rs  jwks.rs  mod.rs  validator.rs
backend/src/cache/: mod.rs  pool.rs
backend/src/config/: constants.rs  mod.rs  version.rs
backend/src/core/: consensus.rs  eclvm_state_host.rs  engine.rs  event_engine.rs  identity_types.rs  mod.rs  state.rs  state_coordination.rs  state_integration.rs  surprisal.rs  trust_engine.rs  world_formula.rs
backend/src/db/: mod.rs  queries.rs
backend/src/domain/: did.rs  event.rs  formula.rs  mod.rs  realm.rs  saga.rs  trust.rs
backend/src/domain/unified/: action.rs  component.rs  config.rs  cost.rs  event.rs  formula.rs  identity.rs  message.rs  mod.rs  primitives.rs  realm.rs  saga.rs  schema.rs  system.rs  trust.rs
backend/src/eclvm/: ast.rs  bridge.rs  bytecode.rs  cli.rs  compiler.rs  entrypoints.rs  erynoa_host.rs  mana.rs  mod.rs  optimizer.rs  parser.rs  programmable_gateway.rs  stdlib.rs
backend/src/eclvm/runtime/: gas.rs  host.rs  mod.rs  runner.rs  state_host.rs  vm.rs
backend/src/error/: rpc.rs
backend/src/execution/: context.rs  error.rs  information_loss.rs  mod.rs  tracked.rs
backend/src/local/: archive.rs  blueprint_marketplace.rs  content_store.rs  event_store.rs  identity_store.rs  kv_store.rs  metrics.rs  mod.rs  realm_storage.rs  trust_store.rs
backend/src/peer/: gateway.rs  intent_parser.rs  mod.rs  saga_composer.rs
backend/src/peer/p2p/: behaviour.rs  config.rs  identity.rs  mod.rs  protocol.rs  swarm.rs  testnet.rs  timing.rs  topics.rs  trust_gate.rs
backend/src/peer/p2p/censorship/: bootstrap_helper.rs  bridges.rs  mod.rs  pluggable_transports.rs
backend/src/peer/p2p/diagnostics/: README.md  dashboard.rs  events.rs  integration.rs  layers.rs  layers_old.rs  metrics.rs  mod.rs  state.rs  swarm_state.rs  system_layers.rs  system_state.rs  types.rs
backend/src/peer/p2p/multi_circuit/: mod.rs  parallel_paths.rs
backend/src/peer/p2p/performance/: batch_crypto.rs  circuit_cache.rs  hw_accel.rs  mod.rs
backend/src/peer/p2p/privacy/: contribution_scoring.rs  cover_traffic.rs  dc3.rs  eligibility.rs  lattice_zk.rs  mixing.rs  mod.rs  onion.rs  proof_of_useful_work.rs  relay_selection.rs  resource_verification.rs  service.rs  wire_format.rs  zk_contribution.rs
backend/src/peer/p2p/transport/: hybrid.rs  mod.rs  quic.rs  tcp_fallback.rs
backend/src/protection/: adaptive_calibration.rs  anomaly.rs  anti_calcification.rs  diversity.rs  mod.rs  quadratic.rs
backend/src/storage/: client.rs  mod.rs
backend/tests/: api.rs  backend_integration.rs  identity_integration.rs  p2p_integration.rs  property_tests.proptest-regressions  property_tests.rs  unified_integration.rs
concept/: agents-and-adl.md  cybernetic-loop.md  glossary.md  kernkonzept.md  liquides-datenmodell.md  navigation.md  system-architecture-overview.md  trust-and-reputation.md  use-cases.md
config/: base.toml  local.toml  production.toml
docker/: docker-compose.yml
docs/: ADDITIONAL_IMPROVEMENTS.md  ESSENTIAL_GUIDE.md  FINAL_STRUCTURE_IMPROVEMENTS.md  README.md  STRUCTURE_FINAL.md  STRUCTURE_IMPROVEMENTS.md  STRUCTURE_IMPROVEMENTS_PLAN.md  TROUBLESHOOTING_AUTH.md  TROUBLESHOOTING_LOGIN.md  documentation_status.md  essential_guide.md  navigation.md  readme.md
documentation/: FACHKONZEPT.md  ROADMAP.md
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
infra/: Caddyfile  Dockerfile.backend  Dockerfile.console  Dockerfile.docs  Dockerfile.frontend  Dockerfile.platform  docker-compose.yml  landing.html
migrations/: 20240101000001_create_users_table.sql
scripts/: dev-check.sh
src/: lib.rs  main.rs  (+1 more)
(+683 files in other folders)
