[package]
name = "godstack-api"
version = "0.1.0"
edition = "2021"
authors = ["Erynoa Team"]
description = "God-Stack Backend - High-Performance Rust API"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "godstack-api"
path = "src/main.rs"

[dependencies]
# Async Runtime & Web Framework
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["http2"] }
tower = "0.4"
tower-http = { version = "0.5", features = [
    "cors", "trace", "compression-gzip", "compression-zstd",
    "timeout", "request-id"
] }

# Database (SQLx + PostgreSQL)
sqlx = { version = "0.8", features = [
    "runtime-tokio", "tls-rustls", "postgres",
    "uuid", "chrono", "json", "migrate"
] }

# Cache (Redis/DragonflyDB)
fred = { version = "9", features = ["enable-rustls"] }

# Authentication (ZITADEL / OIDC)
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls", "json"
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"

# Memory Allocator (Jemalloc)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }

[dev-dependencies]
tokio-test = "0.4"
fake = { version = "2", features = ["derive", "chrono", "uuid"] }
wiremock = "0.6"
claims = "0.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
