[package]
name = "erynoa-api"
version = "0.1.0"
edition = "2021"
authors = ["Erynoa Team"]
description = "Erynoa Backend - High-Performance Rust API"
license = "MIT"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "erynoa-api"
path = "src/main.rs"

[dependencies]
# Async Runtime & Web Framework
tokio = { version = "1", features = ["full"] }
# Note: axum-connect 0.5 requires axum >= 0.8
axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "compression-zstd",
    "timeout",
    "request-id",
] }

# ============================================================================
# DEZENTRALE STORAGE-SCHICHT
# ============================================================================

# Embedded Key-Value Store (ersetzt PostgreSQL)
fjall = "2"
tempfile = "3" # Für temporäre Datenbanken (Tests)

# Database (SQLx + PostgreSQL) - LEGACY, wird entfernt
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
], optional = true }

# Cache (Redis/DragonflyDB) - LEGACY, wird entfernt
fred = { version = "9", features = ["enable-rustls"], optional = true }

# ============================================================================
# DEZENTRALE IDENTITÄT
# ============================================================================

# Ed25519 Signaturen für DID-Auth (ersetzt ZITADEL)
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.8"
bs58 = "0.5"                                                         # Base58 Encoding für DIDs

# Authentication (ZITADEL / OIDC) - LEGACY, wird entfernt
jsonwebtoken = { version = "9", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "1"
anyhow = "1"

# ============================================================================
# CONTENT ADDRESSABLE STORAGE (ersetzt S3/MinIO)
# ============================================================================

# S3 Object Storage (MinIO) - LEGACY, wird entfernt
aws-config = { version = "1", features = [
    "behavior-version-latest",
], optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
url = "2"

# Cryptography (for Event hashing, DID signatures)
sha2 = "0.10"
hex = "0.4"

# Connect-RPC / gRPC-Web
axum-connect = "0.5"
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"

# ⚡ PRODUCTION HARDENING: Rate Limiting (verhindert DoS/Traffic-Floods)
tower_governor = "0.4"

# Memory Allocator (Jemalloc) - optional, disabled in dev by default due to Nix build issues
tikv-jemallocator = { version = "0.6", features = [
    "background_threads",
], optional = true }

[features]
default = ["decentralized"]
jemalloc = ["dep:tikv-jemallocator"]
connect = []                         # Enable Connect-RPC/gRPC-Web support

# Dezentrale Architektur (Standard)
decentralized = []

# Legacy-Features für Migration (optional)
legacy-sql = ["dep:sqlx"]
legacy-cache = ["dep:fred"]
legacy-s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-credential-types"]
legacy-oidc = ["dep:jsonwebtoken", "dep:reqwest"]
legacy = ["legacy-sql", "legacy-cache", "legacy-s3", "legacy-oidc"]

[build-dependencies]
axum-connect-build = "0.3"

[dev-dependencies]
tokio-test = "0.4"
fake = { version = "2", features = ["derive", "chrono", "uuid"] }
wiremock = "0.6"
claims = "0.7"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
