[package]
name = "erynoa-api"
version = "0.1.0"
edition = "2021"
authors = ["Erynoa Team"]
description = "Erynoa Backend - High-Performance Rust API"
license = "MIT"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "erynoa-api"
path = "src/main.rs"

[[bin]]
name = "ecl"
path = "src/bin/ecl.rs"
required-features = ["cli"]

[dependencies]
# ============================================================================
# ASYNC RUNTIME & WEB FRAMEWORK
# ============================================================================
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "compression-zstd",
    "timeout",
    "request-id",
    "fs",               # Static file serving für Frontends
    "set-header",       # Cache-Control headers für static assets
] }

# ============================================================================
# DEZENTRALE STORAGE-SCHICHT (Fjall Embedded KV)
# ============================================================================
fjall = "2"
tempfile = "3"

# ============================================================================
# DEZENTRALE IDENTITÄT (Ed25519 DID-Auth)
# ============================================================================
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.8"
bs58 = "0.5"

# ============================================================================
# SERIALIZATION
# ============================================================================
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ============================================================================
# CONFIGURATION
# ============================================================================
config = "0.14"
dotenvy = "0.15"

# ============================================================================
# OBSERVABILITY
# ============================================================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ============================================================================
# ERROR HANDLING
# ============================================================================
thiserror = "1"
anyhow = "1"

# ============================================================================
# PARSER (ECLVM DSL)
# ============================================================================
chumsky = "0.9"
ariadne = "0.4"

# ============================================================================
# CLI (ECL REPL/Tool)
# ============================================================================
clap = { version = "4", features = ["derive"], optional = true }
rustyline = { version = "14", optional = true }
colored = { version = "2", optional = true }
bincode = { version = "1", optional = true }

# ============================================================================
# UTILITIES
# ============================================================================
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
url = "2"

# ============================================================================
# CRYPTOGRAPHY (Event hashing, DID signatures)
# ============================================================================
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# ============================================================================
# CONNECT-RPC / gRPC-Web (optional)
# ============================================================================
axum-connect = "0.5"
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"

# ============================================================================
# PRODUCTION HARDENING
# ============================================================================
tower_governor = "0.4"

# Memory Allocator (optional)
tikv-jemallocator = { version = "0.6", features = [
    "background_threads",
], optional = true }
blake3 = "1.8.3"

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]
connect = []
cli = ["dep:clap", "dep:rustyline", "dep:colored", "dep:bincode"]

[build-dependencies]
axum-connect-build = "0.3"

[dev-dependencies]
tokio-test = "0.4"
fake = { version = "2", features = ["derive", "chrono", "uuid"] }
wiremock = "0.6"
claims = "0.7"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
