[package]
name = "erynoa-api"
version = "0.1.0"
edition = "2021"
authors = ["Erynoa Team"]
description = "Erynoa Backend - High-Performance Rust API"
license = "MIT"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "erynoa-api"
path = "src/main.rs"

[[bin]]
name = "ecl"
path = "src/bin/ecl.rs"
required-features = ["cli"]

[[bin]]
name = "erynoa-testnet-node"
path = "src/bin/testnet_node.rs"
required-features = ["p2p"]

[[bin]]
name = "erynoa-debug"
path = "src/bin/debug.rs"
required-features = ["debug"]

[dependencies]
# ============================================================================
# ASYNC RUNTIME & WEB FRAMEWORK
# ============================================================================
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "compression-zstd",
    "timeout",
    "request-id",
    "fs",               # Static file serving für Frontends
    "set-header",       # Cache-Control headers für static assets
] }

# ============================================================================
# DEZENTRALE STORAGE-SCHICHT (Fjall Embedded KV)
# ============================================================================
fjall = "2"
tempfile = "3"

# ============================================================================
# DEZENTRALE IDENTITÄT (Ed25519 DID-Auth)
# ============================================================================
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand = "0.8"
bs58 = "0.5"

# ============================================================================
# SERIALIZATION
# ============================================================================
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ============================================================================
# CONFIGURATION
# ============================================================================
config = "0.14"
dotenvy = "0.15"

# ============================================================================
# OBSERVABILITY
# ============================================================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ============================================================================
# ERROR HANDLING
# ============================================================================
thiserror = "1"
anyhow = "1"

# ============================================================================
# PARSER (ECLVM DSL)
# ============================================================================
chumsky = "0.9"
ariadne = "0.4"

# ============================================================================
# CLI (ECL REPL/Tool)
# ============================================================================
clap = { version = "4", features = ["derive"], optional = true }
rustyline = { version = "14", optional = true }
colored = { version = "2", optional = true }
bincode = { version = "1", optional = true }

# ============================================================================
# UTILITIES
# ============================================================================
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
url = "2"

# ============================================================================
# SHARDING & HIGH-PERFORMANCE CONCURRENT DATA STRUCTURES
# ============================================================================
dashmap = "6"    # Lock-free concurrent HashMap (sharded internally)
lru = "0.12"     # LRU Cache for Eviction Policy
rustc-hash = "2" # Fast non-cryptographic hashing (FxHash)

# ============================================================================
# CRYPTOGRAPHY (Event hashing, DID signatures)
# ============================================================================
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# ============================================================================
# CONNECT-RPC / gRPC-Web (optional)
# ============================================================================
axum-connect = "0.5"
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"

# ============================================================================
# PRODUCTION HARDENING
# ============================================================================
tower_governor = "0.4"

# Memory Allocator (optional)
tikv-jemallocator = { version = "0.6", features = [
    "background_threads",
], optional = true }
blake3 = "1.8.3"

# ============================================================================
# DEZENTRALE P2P-NETZWERK-SCHICHT (libp2p)
# ============================================================================
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "mdns",
    "request-response",
    "identify",
    "ping",
    "macros",
    "serde",
    "ed25519",
    # NAT Traversal (Priorität 3)
    "autonat", # Automatic NAT detection
    "dcutr",   # Direct Connection Upgrade through Relay
    "relay",   # Circuit Relay for NAT traversal
    "upnp",    # UPnP port mapping
    # QUIC Transport (Phase 1)
    "quic", # QUIC Transport mit 0-RTT
], optional = true }
futures = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", features = ["time"], optional = true }

# ============================================================================
# PRIVACY-LAYER (P2P-PRIVATE-RELAY-LOGIC V2.6 – Phase 1)
# ============================================================================

# Kryptographie für Onion-Routing (RL2-RL4)
x25519-dalek = { version = "2", features = [
    "static_secrets",
], optional = true } # X25519 ECDH für Hop-Key-Agreement
chacha20poly1305 = { version = "0.10", optional = true } # AEAD für Layer-Encryption
hkdf = { version = "0.12", optional = true } # Key-Derivation für Session-Keys
zeroize = { version = "1", features = [
    "derive",
], optional = true } # Secure Memory Wipe
getrandom = { version = "0.2", optional = true } # Cryptographic RNG

# Zero-Knowledge Proofs (RL1 ZK-Eligibility) – Phase 3
bulletproofs = { version = "4", optional = true }                           # Range-Proofs für Trust (Legacy)
curve25519-dalek = { version = "4", features = ["serde"], optional = true }
merlin = { version = "3", optional = true }                                 # Transcript-based ZK

# Differential Privacy (RL8 ε-DP Mixing)
statrs = { version = "0.17", optional = true } # Laplace-Distribution für Delays

# Performance (RL20-RL23)
arrayvec = { version = "0.7", optional = true } # Stack-allocated vectors
bytes = { version = "1", optional = true }      # Zero-copy buffers
rayon = { version = "1.10", optional = true }   # Parallel batch processing (RL20)

# Hardware-Beschleunigung Detection
cpufeatures = { version = "0.2", optional = true } # Runtime CPU-Feature-Detection

# ============================================================================
# EGUI DEBUGGER (src/debug) – Live Cockpit für UnifiedState
# ============================================================================
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
egui_plot = { version = "0.29", optional = true }

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]
cli = ["dep:clap", "dep:rustyline", "dep:colored", "dep:bincode"]
p2p = ["dep:libp2p", "dep:futures", "dep:tokio-stream"]

# Privacy-Layer Features (Phase 1)
privacy = [
    "p2p",
    "dep:x25519-dalek",
    "dep:chacha20poly1305",
    "dep:hkdf",
    "dep:zeroize",
    "dep:getrandom",
    "dep:arrayvec",
    "dep:bytes",
    "dep:rayon",
]
privacy-zk = [
    "privacy",
    "dep:bulletproofs",
    "dep:curve25519-dalek",
    "dep:merlin",
]
privacy-mixing = ["privacy", "dep:statrs"]
privacy-full = ["privacy", "privacy-zk", "privacy-mixing", "dep:cpufeatures"]

# Native egui Debugger (UnifiedState, Trust, Events, P2P, Realms, ECLVM)
debug = ["dep:eframe", "dep:egui", "dep:egui_plot"]

[build-dependencies]
axum-connect-build = "0.3"

[dev-dependencies]
tokio-test = "0.4"
fake = { version = "2", features = ["derive", "chrono", "uuid"] }
wiremock = "0.6"
claims = "0.7"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tempfile = "3"
proptest = "1.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
